Clean GMK Tree Reading * Use Integer.valueOf instead of deprecated Integer constructor. * Safe because reference equality was not being relied upon for stack. * Simplify a ternary assignment branch for hasRef boolean. * Move localization tag to correct line for translated message.